# kglife

./: .flatpak-manifest.json  .gitignore  AnalysysDialog.cpp  AnalysysDialog.h  AnalysysDialog.ui  CMakeLists.txt  CONTRIBUTORS.md  DialogItemDelegate.cpp  GLifeObject.cpp  GLifeObject.h  KLGameField.cpp  KLGameField.h  LoadGameException.h  Messages.sh  README.md  actionsui.rc  cellsgenerator.cpp  cellsgenerator.h  configdialog.cpp  configdialog.h  configdialog.ui  generalpage.cpp  generalpage.h  generalpage.ui  generatorpage.cpp  generatorpage.h  generatorpage.ui  images.qrc  kglife.1  kglife.de.1  kglife.kcfg  kglife.kcfgc  kglife.qrc  kglife.ru.1  kglifeui.rc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_de.ts  (+10 more)
.reuse/: dep5
desktop/: kglife.desktop  org.kde.kglife.desktop
doc/: index.docbook  man-kglife.1.docbook
po/de/: kglife.po
po/de/docs/kglife/: index.docbook  man-kglife.1.docbook
po/en/docs/kglife/: index.docbook
po/ru/: kglife.po
po/ru/docs/kglife/: index.docbook  man-kglife.1.docbook
templates/: eater.desktop  eater.kgol  glider_gun.desktop  glider_gun.kgol  gliders.desktop  gliders.kgol  oscillators.desktop  oscillators.kgol  spaceships.desktop  spaceships.kgol  test.desktop  test.kgol
